--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,122 @@
 ---
 title: "Introduction"
-description: "Welcome to the new home for your documentation"
+description: "Welcome to Yirifi.ai - Your intelligent content and knowledge management platform"
 ---
 
-## Setting up
+# Yirifi.ai API Documentation
 
-Get your documentation site up and running in minutes.
+Yirifi.ai provides powerful APIs for content management, knowledge base operations, and intelligent information services. Build applications that leverage AI-driven content organization, search, and retrieval capabilities.
+
+## Get Started
+
+Build your first integration with Yirifi.ai in minutes.
 
 <Card
-  title="Start here"
+  title="Quickstart Guide"
   icon="rocket"
   href="/quickstart"
   horizontal
 >
-  Follow our three step quickstart guide.
+  Get up and running with your first API call in under 5 minutes.
 </Card>
 
-## Make it yours
+## Core Features
 
-Design a docs site that looks great and empowers your users.
+Access our comprehensive suite of content and knowledge management APIs.
 
 <Columns cols={2}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
+    title="Content Management"
+    icon="folder-open"
+    href="/api-reference/category/endpoints"
   >
-    Edit your docs locally and preview them in real time.
+    Organize and manage categories, templates, and components with intelligent classification.
   </Card>
   <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
+    title="Knowledge Base"
+    icon="book-open"
+    href="/api-reference/glossary/endpoints"
   >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+    Build dynamic glossaries, FAQs, and question-answer systems.
   </Card>
   <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
+    title="Information Services"
+    icon="newspaper"
+    href="/api-reference/news/endpoints"
   >
-    Auto-generate API documentation from OpenAPI specifications.
+    Access curated news, people data, and use case information.
+  </Card>
+  <Card
+    title="Advanced Features"
+    icon="sparkles"
+    href="/api-reference/feature/endpoints"
+  >
+    Leverage advanced AI features and vendor integrations.
   </Card>
 </Columns>
 
-## Create beautiful pages
+## Developer Resources
 
-Everything you need to create world-class documentation.
+Everything you need to integrate successfully with Yirifi.ai.
 
-<Columns cols={2}>
+<Columns cols={3}>
   <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
+    title="Authentication"
+    icon="key"
+    href="/authentication"
   >
-    Use MDX to style your docs pages.
+    Secure API access with bearer tokens and proper authentication.
   </Card>
   <Card
-    title="Code samples"
+    title="Rate Limits"
+    icon="gauge"
+    href="/guides/rate-limiting"
+  >
+    Understand API limits and best practices for optimal performance.
+  </Card>
+  <Card
+    title="Error Handling"
+    icon="exclamation-triangle"
+    href="/guides/error-handling"
+  >
+    Handle errors gracefully with our comprehensive error codes and responses.
+  </Card>
+</Columns>
+
+## SDKs & Libraries
+
+Start building faster with our official SDKs and community libraries.
+
+<Columns cols={3}>
+  <Card
+    title="JavaScript SDK"
+    icon="js"
+    href="/sdks/javascript"
+  >
+    Full-featured SDK for Node.js and browser environments.
+  </Card>
+  <Card
+    title="Python SDK"
+    icon="python"
+    href="/sdks/python"
+  >
+    Pythonic interface for all Yirifi.ai APIs with async support.
+  </Card>
+  <Card
+    title="REST API"
     icon="code"
-    href="/essentials/code"
+    href="/sdks/rest"
   >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
+    Direct HTTP integration examples and best practices.
   </Card>
 </Columns>
 
-## Need inspiration?
+## Ready to get started?
 
 <Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
+  title="Get your API key"
+  icon="key"
+  href="https://yirifi.ai/dashboard"
 >
-  Browse our showcase of exceptional documentation sites.
+  Sign up for free and get your API key to start building with Yirifi.ai.
 </Card>
